--- a/Felipe/HTML/Sequencial/Sequencial01.html
+++ b/Felipe/HTML/Sequencial/Sequencial01.html
@@ -1,5 +1,10 @@
 <meta charset="utf-8">
-
-<script>
-    document.write ("Olá Mundo");
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Minha página</title>
+</head>
+<body>
+<p>Olá Mundo</p>
+</body>
+</html>
